--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,4 +2,6 @@
   <h2>List of places</h2>
 
   <div>The list is under construction</div>
+
+  <div id="places-list-container">Places list rendered in reacts</div>
 </div>
