--- a/app/views/pages/places/index.html.erb
+++ b/app/views/pages/places/index.html.erb
@@ -1,3 +1,5 @@
+<div id='page-places'></div>
+
 <div class='big-white p-8 rounded-md w-full'>
   <div class='flex flex-col items-center'>
     <div class='flex flex-col items-center'>
@@ -24,4 +26,6 @@
           <p class='text-gray-500'>More filters</p>
         </div>
       </div>
+    </div>
+  </div>
 </div>
