Refactor routing to use react-router-dom and add blank page for new internet-speed

--- a/app/views/pages/places/index.html.erb
+++ b/app/views/pages/places/index.html.erb
@@ -1,31 +1,2 @@
-<div id='page-places'></div>
+<div id='app'></div>
 
-<div class='big-white p-8 rounded-md w-full'>
-  <div class='flex flex-col items-center'>
-    <div class='flex flex-col items-center'>
-      <h1 class='text-3xl font-bold'>Places</h1>
-      <p class='text-gray-500'>Find a place to stay</p>
-    </div>
-    <div class='flex flex-col items-center'>
-      <div class='flex flex-row items-center'>
-        <div class='flex flex-col items-center'>
-          <p class='text-gray-500'>Check-in</p>
-          <p class='text-gray-500'>Check-out</p>
-        </div>
-        <div class='flex flex-col items-center'>
-          <p class='text-gray-500'>Guests</p>
-          <p class='text-gray-500'>Rooms</p>
-        </div>
-      </div>
-      <div class='flex flex-row items-center'>
-        <div class='flex flex-col items-center'>
-          <p class='text-gray-500'>Price</p>
-          <p class='text-gray-500'>Instant Book</p>
-        </div>
-        <div class='flex flex-col items-center'>
-          <p class='text-gray-500'>More filters</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
